--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,10 +23,10 @@
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	//"forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+	"postCreateCommand": "bash tools/install-dev-tools.sh",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node",
@@ -34,6 +34,10 @@
 		"git-lfs": "latest",
 		"github-cli": "latest",
 		"azure-cli": "latest",
-		"sshd": "latest"
+		"sshd": "latest",
+		"docker-in-docker": {
+			"version": "latest",
+			"moby": true
+		}
 	}
 }
