--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "build": "webpack",
     "dev": "webpack serve",
     "test": "jest",
-    "test:actions": "bin/act -j build" 
+    "test:actions": "bin/act -j build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cocobokostudios/videogamelibrary.git"
-  },
+  "repository": "git+https://github.com/cocobokostudios/videogamelibrary.git",
   "author": "David Wesst <david@cocobokostudios.com>",
   "license": "Apache-2.0",
   "bugs": {
@@ -37,10 +34,12 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-version-file": "https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "private": true
 }
