--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -35,7 +36,7 @@
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-version-file": "https://github.com/cocobokostudios/webpack-version-file#main"
+    "webpack-version-file": "git+https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
     "react": "^17.0.2",
