--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,8 @@ jobs:
     - uses: actions/setup-node@v2-beta
       with:
         node-version: 16
-    - run: npm install
-    - run: npm run build
-    - run: npm test
+    - run: npm install -g yarn
+    - run: yarn install
+    - run: yarn run build
+    - run: yarn test
        
