--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
       "jsx": "react",
       "allowJs": true,
       "moduleResolution": "node",
-      "resolveJsonModule": true
-    }
+      "resolveJsonModule": true,
+    },
+    "include": [
+      "./src/",
+      "./types/",
+      "./jest-setup.ts"  
+    ]
   }
