--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@fluentui/react": "^8.55.3",
+    "@fluentui/react-icons-mdl2": "^1.2.16",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
@@ -40,6 +42,7 @@
     "webpack-version-file": "git+https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
+    
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
