--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"dbaeumer.vscode-eslint",
-		"Orta.vscode-jest"
+		"Orta.vscode-jest",
+		"ms-azuretools.vscode-bicep"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
