--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve",
+    "dev:web": "swa start ./dist",
     "test": "jest",
     "test:actions": "bin/act -j build"
   },
@@ -42,7 +43,6 @@
     "webpack-version-file": "git+https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
-    
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
