fixed secret in script. #1

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    - run: . ./tools/az-deploy.sh ${{ GH_WORKFLOW_TOKEN }}
+    - run: . ./tools/az-deploy.sh ${{ secrets.GH_WORKFLOW_TOKEN }}
 
 
        
