--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
     - run: yarn test
   deploy:
     name: Deploy
-    if: github.ref == 'refs/heads/ft/app-deployment'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'pull_request' && github.event.action != 'closed'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
