only run workflow on push or pr with main. #1

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,8 +2,7 @@ name: CI/CD
 on:
   push:
     branches:
-      - ft/*
-      - hf/*
+      - main
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
