--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+env:
+  STATICWEBAPPNAME: vgl-app
+
 jobs:
   build:
     name: Build
@@ -35,7 +38,27 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
-    - run: . ./tools/az-deploy.sh ${{ secrets.GH_WORKFLOW_TOKEN }}
+    - name: Deploy Infra
+      if: github.event_name != 'pull_request'
+      run: . ./tools/az-deploy.sh ${{ secrets.GH_WORKFLOW_TOKEN }}
+    - name: Static Web App - get API key for deployment
+      id: static_web_app_apikey
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          APIKEY=$(az staticwebapp secrets list --name '${{ env.STATICWEBAPPNAME }}' | jq -r '.properties.apiKey')
+          echo "::set-output name=APIKEY::$APIKEY"
+    - name: Static Web App - build and deploy
+      id: static_web_app_build_and_deploy
+      uses: Azure/static-web-apps-deploy@v1
+      with:
+        azure_static_web_apps_api_token: ${{ steps.static_web_app_apikey.outputs.APIKEY }}
+        repo_token: ${{ secrets.GH_WORKFLOW_TOKEN }} # Used for Github integrations (i.e. PR comments)
+        action: 'upload'
+        app_build_command: 'yarn run build'
+        app_location: '.' # App source code path
+        output_location: './dist' # Built app content directory - optional
+
 
 
        
