running workflow job sequentially. #1

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,7 @@ env:
   STATICWEBAPPNAME: vgl-app
 
 jobs:
+  max-parallel: 1
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -58,6 +59,23 @@ jobs:
         app_build_command: 'yarn run build'
         app_location: '.' # App source code path
         output_location: './dist' # Built app content directory - optional
+
+    - name: Static Web App - get preview URL
+      id: static_web_app_preview_url
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          DEFAULTHOSTNAME=$(az staticwebapp show -n '${{ env.STATICWEBAPPNAME }}' | jq -r '.defaultHostname')
+          echo $DEFAULTHOSTNAME
+
+          PREVIEW_URL="https://${DEFAULTHOSTNAME/.[1-9]./-${{github.event.pull_request.number }}.${{ env.LOCATION }}.1.}"
+          echo $PREVIEW_URL
+
+          echo "::set-output name=PREVIEW_URL::$PREVIEW_URL"
+
+    outputs:
+      preview-url: ${{steps.static_web_app_preview_url.outputs.PREVIEW_URL}}
+
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
