--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,8 +12,6 @@ env:
   STATICWEBAPPNAME: vgl-app
 
 jobs:
-  strategy:
-    max-parallel: 1
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -32,6 +30,7 @@ jobs:
   deploy:
     name: Deploy
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
