--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-version-file": "git+https://github.com/cocobokostudios/webpack-version-file#main"
+    "webpack-version-file": "https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
     "react": "^17.0.2",
