--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-version-file": "https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
+    "ajv": "^8.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
