--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.0",
+    "jest-mock-extended": "^2.0.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
