--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-alpha",
   "description": "A React application to manage a library of video games",
   "main": "index.js",
+  "bin": "dist/cli.js",
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve",
@@ -30,6 +31,7 @@
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/yargs": "^17.0.10",
     "babel-jest": "^27.5.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
@@ -46,7 +48,8 @@
   "dependencies": {
     "ajv": "^8.10.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "yargs": "^17.4.0"
   },
   "private": true
 }
