--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0-alpha",
   "description": "A React application to manage a library of video games",
   "main": "index.js",
-  "bin": "dist/cli.js",
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve",
@@ -29,6 +28,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/yargs": "^17.0.10",
