updated deployment script with new app location

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,7 +58,7 @@ jobs:
         action: 'upload'
         app_build_command: 'yarn run build'
         app_location: '.' # App source code path
-        output_location: './dist' # Built app content directory - optional
+        output_location: './dist/app' # Built app content directory - optional
 
     - name: Get Preview URL
       id: static_web_app_preview_url
