--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A React application to manage a library of video games",
   "main": "index.js",
   "scripts": {
+    "prebuild": "rm -rf ./dist/**/*.*",
     "build": "webpack",
     "postbuild": "chmod +x ./dist/cli/cli.js",
     "dev": "webpack serve",
