--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   },
   "dependencies": {
     "ajv": "^8.10.0",
+    "axios": "^0.26.1",
+    "conf": "^10.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "yargs": "^17.4.0"
