--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
 	"extensions": [
 		"dbaeumer.vscode-eslint",
 		"Orta.vscode-jest",
-		"ms-azuretools.vscode-bicep"
+		"ms-azuretools.vscode-bicep",
+		"rangav.vscode-thunder-client"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
