--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/yargs": "^17.0.10",
     "babel-jest": "^27.5.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
@@ -51,12 +50,12 @@
     "webpack-version-file": "https://github.com/cocobokostudios/webpack-version-file#main"
   },
   "dependencies": {
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "ajv": "^8.10.0",
     "axios": "^0.26.1",
     "conf": "^10.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "yargs": "^17.4.0"
+    "react-dom": "^17.0.2"
   },
   "private": true
 }
