--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "outDir": "./dist/",
     "esModuleInterop": true,
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "jsx": "react",
+    "module": "es2022",
+    "target": "es2017",
+    "jsx": "react-jsx",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
