--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "ajv": "^8.10.0",
     "axios": "^0.26.1",
+    "bufferutil": "^4.0.6",
     "conf": "^10.1.2",
+    "ink": "^3.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "utf-8-validate": "^5.0.9"
   },
   "private": true
 }
