--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "@fluentui/react-icons-mdl2": "^1.2.16",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
+    "@types/ajv": "^1.0.0",
     "@types/jest": "^27.4.0",
+    "@types/papaparse": "^5.3.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "babel-jest": "^27.5.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-transform-import-meta": "^2.1.1",
     "css-loader": "^6.6.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.0",
     "jest-mock-extended": "^2.0.4",
     "style-loader": "^3.3.1",
+    "typescript": "^4.6.3",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
@@ -45,6 +49,7 @@
   },
   "dependencies": {
     "ajv": "^8.10.0",
+    "papaparse": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
