--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.0",
     "jest-mock-extended": "^2.0.4",
+    "madr": "^2.1.2",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
     "webpack": "^5.68.0",
