--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videogamelibrary",
-  "version": "0.0.0-alpha",
+  "version": "0.1.0",
   "description": "A React application to manage a library of video games",
   "main": "index.js",
   "scripts": {
